# grasp_affordance_reasoning_demo

./: README.md
getting_inference_ready/: README.md  segmenting_and_detecting.m
mln/: README.md
mln/mln_affordance/: data.txt  formula.txt  inference_data.txt  learnt_mln.mln  main.py  predicate.txt  query.txt
mln/mln_docker/: Dockerfile  mln_affordance.tar.xz  mln_smoker_scenario.tar.xz
pt_cloud_transformation/: CMakeLists.txt  README.md  package.xml  spatial_filter.m
pt_cloud_transformation/src/: point_cloud_transformation.cpp
semantic_affordance_grasps_labels/: README.md  labelling_grasping_regions.m  saving_labelled_grasping_regions_pclouds.m
sq_scene/: CMakeLists.txt  README.md
sq_scene/include/: scene_as_sqs.hpp  scene_segmentation.hpp  sq_fitting.h  sq_sampling.h  sq_utils.h
sq_scene/src/: cloud_viewer.cpp  scene_as_sqs.cpp  scene_segmentation.cpp  sq_fitting.cpp  sq_sampling.cpp  sq_utils.cpp
