<package>
  <name>point_cloud_transformation</name>
  <version>1.0.0</version>
  <description>point_cloud_transformation transforms the PCL coordinate frame from camera to base of the PR2.</description>
  <maintainer email="paola.ardon.ramirez@gmail.com">Paola Ardon</maintainer>

  <license>BSD</license>
  
  <build_depend>roscpp</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
